coffee-shop/deployment/production/coffee-shop-db.yaml
kind: Service
apiVersion: v1
metadata:
  name: coffee-shop-db
spec:
  selector:
    app: coffee-shop-db
  ports:
  - port: 5432
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: coffee-shop-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffee-shop-db
  template:
    metadata:
      labels:
        app: coffee-shop-db
    spec:
      containers:
      - name: coffee-shop-db
        image: postgres:9.5
        imagePullPolicy: Always
      restartPolicy: Always
---
