coffee-shop/deployment/production/coffee-shop-processor.yaml
kind: Service
apiVersion: v1
metadata:
  name: coffee-processor
spec:
  selector:
    app: coffee-processor
  ports:
    - port: 8080
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: coffee-processor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: coffee-processor
    spec:
      containers:
      - name: coffee-processor
        image: docker.sebastian-daschner.com/coffee-processor:1
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /coffee-processor/resources/health-check
            port: 8080
      imagePullSecrets:
      - name: regsecret
      restartPolicy: Always
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: coffee-processor
spec:
  rules:
    - host: coffee-processor.kubernetes.local
      http:
        paths:
        - path: /
          backend:
            serviceName: coffee-processor
            servicePort: 8080
---
