coffee-shop/deployment/production/coffee-shop.yaml
kind: Service
apiVersion: v1
metadata:
  name: coffee-shop
spec:
  selector:
    app: coffee-shop
  ports:
    - port: 9080
  type: NodePort
---

kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: coffee-shop
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: coffee-shop
    spec:
      containers:
      - name: coffee-shop
        image: sdaschner/coffee-shop:testing-1
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /coffee-shop/resources/
            port: 9080
      restartPolicy: Always
---

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: coffee-shop
spec:
  rules:
    - host: coffee-shop.kubernetes.local
      http:
        paths:
        - path: /
          backend:
            serviceName: coffee-shop
            servicePort: 9080
---
