coffee-shop/deployment/production/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: coffee-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coffee-gateway
spec:
  hosts:
  - "*"
  gateways:
  - coffee-gateway
  http:
  - match:
    - uri:
        prefix: "/processes"
    route:
    - destination:
        host: barista
        subset: v1
        port:
          number: 8080
  - match:
    - uri:
        prefix: "/orders"
    route:
    - destination:
        host: coffee-shop
        subset: v1
        port:
          number: 8080
---
